--- a/Hippo/UIView/TableViewCell/FeedbackTableCell/FeedbackTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/FeedbackTableCell/FeedbackTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="280" id="doU-Q9-Vru" customClass="FeedbackTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="280" id="doU-Q9-Vru" customClass="FeedbackTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="637" height="280"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="doU-Q9-Vru" id="xHQ-1I-Ino">
@@ -192,7 +192,7 @@
                         </variation>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Iem-0k-8v1">
-                        <rect key="frame" x="10" y="219" width="30" height="30"/>
+                        <rect key="frame" x="10" y="5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="LfW-JP-V3U"/>
                             <constraint firstAttribute="width" secondItem="Iem-0k-8v1" secondAttribute="height" multiplier="1:1" id="jI5-L7-HIM"/>
@@ -203,8 +203,8 @@
                     <constraint firstItem="BeF-ox-UGV" firstAttribute="top" secondItem="xHQ-1I-Ino" secondAttribute="top" constant="5" id="1eD-cd-ic0"/>
                     <constraint firstItem="Iem-0k-8v1" firstAttribute="leading" secondItem="xHQ-1I-Ino" secondAttribute="leading" constant="10" id="3yU-mv-HHf"/>
                     <constraint firstItem="BeF-ox-UGV" firstAttribute="leading" secondItem="Iem-0k-8v1" secondAttribute="trailing" constant="5" id="IO3-ww-0Dj"/>
+                    <constraint firstItem="Iem-0k-8v1" firstAttribute="top" secondItem="BeF-ox-UGV" secondAttribute="top" id="IsN-dc-Uea"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="BeF-ox-UGV" secondAttribute="bottom" constant="5" id="aLA-Zi-wsC"/>
-                    <constraint firstItem="Iem-0k-8v1" firstAttribute="bottom" secondItem="BeF-ox-UGV" secondAttribute="bottom" id="gB9-Ez-raE"/>
                     <constraint firstAttribute="trailing" secondItem="BeF-ox-UGV" secondAttribute="trailing" constant="45" id="sDi-i4-qKR"/>
                 </constraints>
                 <variation key="default">
