--- a/Hippo/UIView/TableViewCell/IncomingDocumentCell/IncomingDocumentTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/IncomingDocumentCell/IncomingDocumentTableViewCell.xib
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingDocumentTableViewCell" rowHeight="105" id="uSr-yv-bAz" customClass="IncomingDocumentTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingDocumentTableViewCell" rowHeight="105" id="uSr-yv-bAz" customClass="IncomingDocumentTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="347" height="105"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uSr-yv-bAz" id="c6o-Ft-FlH">
@@ -139,7 +143,7 @@
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2iD-IP-td1">
-                        <rect key="frame" x="10" y="71.5" width="30" height="30"/>
+                        <rect key="frame" x="10" y="3" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="2iD-IP-td1" secondAttribute="height" multiplier="1:1" id="7IC-p1-axS"/>
                             <constraint firstAttribute="height" constant="30" id="P28-SX-7AR"/>
@@ -155,9 +159,9 @@
                     <constraint firstItem="wjk-5K-NbM" firstAttribute="leading" secondItem="2iD-IP-td1" secondAttribute="trailing" constant="5" id="Her-ZI-4vV"/>
                     <constraint firstItem="r0K-ss-mYR" firstAttribute="width" secondItem="r0K-ss-mYR" secondAttribute="height" multiplier="1:1" id="JM3-xB-Ypc"/>
                     <constraint firstItem="r0K-ss-mYR" firstAttribute="bottom" secondItem="wjk-5K-NbM" secondAttribute="bottom" id="QRQ-ph-nZe"/>
-                    <constraint firstItem="2iD-IP-td1" firstAttribute="bottom" secondItem="wjk-5K-NbM" secondAttribute="bottom" id="Ucp-SE-VKq"/>
                     <constraint firstItem="wjk-5K-NbM" firstAttribute="top" secondItem="c6o-Ft-FlH" secondAttribute="top" constant="3" id="XYw-if-rGJ"/>
                     <constraint firstAttribute="trailing" secondItem="wjk-5K-NbM" secondAttribute="trailing" constant="60" id="ZGh-VB-vTc"/>
+                    <constraint firstItem="2iD-IP-td1" firstAttribute="top" secondItem="wjk-5K-NbM" secondAttribute="top" id="ewy-r6-fxC"/>
                     <constraint firstItem="cYh-Cb-vMj" firstAttribute="centerY" secondItem="wjk-5K-NbM" secondAttribute="centerY" id="kNX-ED-nfb"/>
                 </constraints>
             </tableViewCellContentView>
