--- a/Hippo/UIView/TableViewCell/VideoCallMessageTableViewCell/IncomingVideoCallMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/VideoCallMessageTableViewCell/IncomingVideoCallMessageTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingVideoCallMessageTableViewCell" rowHeight="107" id="gHp-v5-Fq8" customClass="IncomingVideoCallMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingVideoCallMessageTableViewCell" rowHeight="107" id="gHp-v5-Fq8" customClass="IncomingVideoCallMessageTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="621" height="107"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gHp-v5-Fq8" id="9cx-do-cRA">
@@ -78,7 +78,7 @@
                         </constraints>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e98-kr-4uI">
-                        <rect key="frame" x="10" y="63" width="30" height="30"/>
+                        <rect key="frame" x="10" y="5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Wbu-zI-Ahq"/>
                         </constraints>
@@ -89,8 +89,8 @@
                     <constraint firstItem="2Yt-JO-M0w" firstAttribute="leading" secondItem="e98-kr-4uI" secondAttribute="trailing" constant="5" id="0bL-yZ-T6N"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2Yt-JO-M0w" secondAttribute="bottom" constant="5" id="CLT-Cn-Dph"/>
                     <constraint firstItem="e98-kr-4uI" firstAttribute="leading" secondItem="9cx-do-cRA" secondAttribute="leading" constant="10" id="IhK-BY-0S4"/>
+                    <constraint firstItem="e98-kr-4uI" firstAttribute="top" secondItem="2Yt-JO-M0w" secondAttribute="top" id="QMQ-rK-f1y"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2Yt-JO-M0w" secondAttribute="trailing" constant="60" id="SSz-xV-B35"/>
-                    <constraint firstItem="e98-kr-4uI" firstAttribute="bottom" secondItem="2Yt-JO-M0w" secondAttribute="bottom" id="VHv-ub-jfp"/>
                     <constraint firstItem="e98-kr-4uI" firstAttribute="width" secondItem="e98-kr-4uI" secondAttribute="height" multiplier="1:1" id="Vzi-Kd-e5z"/>
                     <constraint firstItem="2Yt-JO-M0w" firstAttribute="top" secondItem="9cx-do-cRA" secondAttribute="top" constant="5" id="shU-fv-l3U"/>
                 </constraints>
