--- a/Hippo/UIView/TableViewCell/VideoTableViewCell/IncomingVideoTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/VideoTableViewCell/IncomingVideoTableViewCell.xib
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,7 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingVideoTableViewCell" rowHeight="326" id="YXl-Ol-ZcQ" customClass="IncomingVideoTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingVideoTableViewCell" rowHeight="326" id="YXl-Ol-ZcQ" customClass="IncomingVideoTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="397" height="326"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YXl-Ol-ZcQ" id="3aX-oP-ClI">
@@ -173,7 +177,7 @@
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jwU-0l-hrM">
-                        <rect key="frame" x="10" y="216" width="30" height="30"/>
+                        <rect key="frame" x="10" y="3" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="jwU-0l-hrM" secondAttribute="height" multiplier="1:1" id="rYY-1u-7Yn"/>
                             <constraint firstAttribute="height" constant="30" id="zbE-bk-XKv"/>
@@ -191,7 +195,7 @@
                     <constraint firstItem="05m-FY-bAP" firstAttribute="leading" secondItem="kJc-U5-IYq" secondAttribute="trailing" id="hJg-Yr-hUs"/>
                     <constraint firstItem="5Tk-pp-FCm" firstAttribute="bottom" secondItem="kJc-U5-IYq" secondAttribute="bottom" id="mdy-Pe-laF"/>
                     <constraint firstItem="kJc-U5-IYq" firstAttribute="leading" secondItem="jwU-0l-hrM" secondAttribute="trailing" constant="5" id="mhW-JD-fZr"/>
-                    <constraint firstItem="jwU-0l-hrM" firstAttribute="bottom" secondItem="kJc-U5-IYq" secondAttribute="bottom" id="qti-qg-TFH"/>
+                    <constraint firstItem="jwU-0l-hrM" firstAttribute="top" secondItem="kJc-U5-IYq" secondAttribute="top" id="mka-Q3-cj8"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
