--- a/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
@@ -12,31 +12,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="267" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="HippoChat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="286" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="HippoChat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="286"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="266.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="285.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xud-Uu-5dH">
-                        <rect key="frame" x="5" y="5" width="310" height="256.5"/>
+                        <rect key="frame" x="5" y="5" width="310" height="275.5"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
                                 <rect key="frame" x="0.0" y="0.0" width="310" height="175"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="9F7-sk-WQP"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S2-SK-Yv7">
-                                <rect key="frame" x="8" y="180" width="294" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9E-VN-wq9">
-                                <rect key="frame" x="8" y="209" width="294" height="43"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="WhG-y0-qES">
+                                <rect key="frame" x="10" y="180" width="310" height="78.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S2-SK-Yv7">
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="35"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9E-VN-wq9">
+                                        <rect key="frame" x="0.0" y="40" width="310" height="38.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fcn-By-Hj8">
+                                <rect key="frame" x="274" y="263.5" width="31" height="10"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="S9J-6o-Wgd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -44,14 +58,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" id="1SY-2q-622"/>
-                            <constraint firstItem="P9E-VN-wq9" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="8" id="60N-kq-Plg"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="leading" secondItem="B24-ZH-lMi" secondAttribute="leading" constant="10" id="9od-5g-eAG"/>
+                            <constraint firstAttribute="bottom" secondItem="Fcn-By-Hj8" secondAttribute="bottom" constant="2" id="Ex9-Vv-EIC"/>
                             <constraint firstItem="B24-ZH-lMi" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" id="Gd7-eX-5J8"/>
-                            <constraint firstAttribute="trailing" secondItem="6S2-SK-Yv7" secondAttribute="trailing" constant="8" id="X1a-P9-mWu"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="top" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="5" id="Oq8-9d-nXn"/>
+                            <constraint firstAttribute="trailing" secondItem="Fcn-By-Hj8" secondAttribute="trailing" constant="5" id="ZGg-2p-tCF"/>
+                            <constraint firstItem="Fcn-By-Hj8" firstAttribute="top" secondItem="WhG-y0-qES" secondAttribute="bottom" constant="5" id="b4h-Kd-yRz"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" constant="10" id="cTw-wL-0X1"/>
                             <constraint firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" id="lXU-Eb-wX2"/>
-                            <constraint firstAttribute="trailing" secondItem="P9E-VN-wq9" secondAttribute="trailing" constant="8" id="m9i-y8-SIC"/>
-                            <constraint firstAttribute="bottom" secondItem="P9E-VN-wq9" secondAttribute="bottom" constant="5" id="oP1-ia-gHv"/>
-                            <constraint firstItem="6S2-SK-Yv7" firstAttribute="top" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="5" id="oqg-sF-wuY"/>
-                            <constraint firstItem="6S2-SK-Yv7" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="8" id="pdx-LG-mYG"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -65,11 +79,13 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="bgView" destination="Xud-Uu-5dH" id="cfS-wy-d66"/>
+                <outlet property="dateTimeLabel" destination="Fcn-By-Hj8" id="vDI-3H-cRr"/>
                 <outlet property="descriptionLabel" destination="P9E-VN-wq9" id="lcm-uo-xyc"/>
+                <outlet property="imageHeightConstraint" destination="9F7-sk-WQP" id="TMn-U0-VIZ"/>
                 <outlet property="promotionImage" destination="B24-ZH-lMi" id="xUZ-Fm-Qa1"/>
                 <outlet property="promotionTitle" destination="6S2-SK-Yv7" id="m74-Kb-hQU"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="181.13839285714286"/>
+            <point key="canvasLocation" x="137.68115942028987" y="187.5"/>
         </tableViewCell>
     </objects>
     <resources>
