--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -14,10 +14,67 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="gfZ-jG-wTl">
+            <objects>
+                <tabBarController id="KZw-4z-mBH" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="cBw-aD-sXu"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O3N-iq-ldK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="qyf-B6-nJL" kind="relationship" relationship="viewControllers" id="oE9-Bo-mdD"/>
+                        <segue destination="uxO-Mf-Abt" kind="relationship" relationship="viewControllers" id="7Vn-ld-L4D"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O8k-OG-ooO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1202" y="-1119"/>
+        </scene>
+        <!--ANNOUNCEMENTS-->
+        <scene sceneID="W3G-nR-Goi">
+            <objects>
+                <navigationController id="uxO-Mf-Abt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="ANNOUNCEMENTS" image="notification" id="EBS-Kg-a8d"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e1E-4N-jsG">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="CEG-sn-DaH" kind="relationship" relationship="rootViewController" id="H3F-Uo-9TD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ck9-gV-vR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1908" y="-266"/>
+        </scene>
+        <!--CHATS-->
+        <scene sceneID="EwH-an-rCy">
+            <objects>
+                <navigationController id="qyf-B6-nJL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="CHATS" image="newChat" id="2QI-fY-N9q"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lFC-md-xjQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="NiB-L4-OyJ" kind="relationship" relationship="rootViewController" id="hCN-ZF-VMO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tY9-Px-nke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1202" y="-265"/>
+        </scene>
         <!--All Conversations View Controller-->
         <scene sceneID="IiL-kV-OCG">
             <objects>
-                <viewController storyboardIdentifier="AllConversationsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NiB-L4-OyJ" customClass="AllConversationsViewController" customModule="HippoChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AllConversationsViewController" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NiB-L4-OyJ" customClass="AllConversationsViewController" customModule="HippoChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="D4T-4a-D9B"/>
                         <viewControllerLayoutGuide type="bottom" id="eJd-kx-5CY"/>
@@ -27,7 +84,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="91" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yfp-HZ-0Gy">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
                                 <color key="backgroundColor" red="0.97254901960784312" green="0.97647058823529409" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ConversationView" rowHeight="75" id="Vlp-IF-cmU" customClass="ConversationView" customModule="HippoChat" customModuleProvider="target">
@@ -224,7 +281,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RXG-gG-bwh">
-                                <rect key="frame" x="87.5" y="587" width="200" height="50"/>
+                                <rect key="frame" x="87.5" y="488" width="200" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Ia2-lL-RKA"/>
                                     <constraint firstAttribute="width" constant="200" id="b2z-Pi-4La"/>
@@ -238,7 +295,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Runs on Hippo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYt-4i-gIl">
-                                <rect key="frame" x="0.0" y="647" width="375" height="20"/>
+                                <rect key="frame" x="0.0" y="598" width="375" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="0lv-kZ-vjJ"/>
                                 </constraints>
@@ -267,7 +324,7 @@
                             <constraint firstItem="eYt-4i-gIl" firstAttribute="top" secondItem="yfp-HZ-0Gy" secondAttribute="bottom" id="r3g-7a-AUR"/>
                             <constraint firstItem="yfp-HZ-0Gy" firstAttribute="top" secondItem="fN8-67-65O" secondAttribute="bottom" id="weg-PO-Vc7"/>
                             <constraint firstItem="yfp-HZ-0Gy" firstAttribute="leading" secondItem="dUR-q2-McL" secondAttribute="leading" id="x5M-0L-jPK"/>
-                            <constraint firstItem="eYt-4i-gIl" firstAttribute="top" secondItem="RXG-gG-bwh" secondAttribute="bottom" constant="10" id="zZV-6D-5bH"/>
+                            <constraint firstItem="eYt-4i-gIl" firstAttribute="top" secondItem="RXG-gG-bwh" secondAttribute="bottom" constant="60" id="zZV-6D-5bH"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -651,7 +708,7 @@
                                 </constraints>
                             </view>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="app_loader_shape" translatesAutoresizingMaskIntoConstraints="NO" id="eZG-Yq-Sel">
-                                <rect key="frame" x="167.5" y="313.5" width="40" height="40"/>
+                                <rect key="frame" x="179.5" y="325.5" width="16" height="16"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6z-xO-SMj">
                                 <rect key="frame" x="164.5" y="322.5" width="46.5" height="22.5"/>
@@ -748,12 +805,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="NiB-L4-OyJ" kind="relationship" relationship="rootViewController" id="1NW-UZ-ZKh"/>
+                        <segue destination="KZw-4z-mBH" kind="relationship" relationship="rootViewController" id="SBj-0n-8dS"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSl-hV-iBC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-402" y="44"/>
+            <point key="canvasLocation" x="-1961" y="-1119"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pNG-oZ-RXU">
@@ -1127,14 +1184,14 @@
                                     <action selector="actionButtonClicked:" destination="Zql-KC-mKa" id="h9W-l7-3GL"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem image="audioCallIcon" id="3A0-f7-de1">
-                                <connections>
-                                    <action selector="audiCallButtonClicked:" destination="Zql-KC-mKa" id="V0r-B7-nlo"/>
-                                </connections>
-                            </barButtonItem>
                             <barButtonItem image="tiny-video-symbol" id="dhl-Y4-tPK">
                                 <connections>
                                     <action selector="videoButtonClicked:" destination="Zql-KC-mKa" id="wU5-uy-AqE"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="audioCallIcon" id="3A0-f7-de1">
+                                <connections>
+                                    <action selector="audiCallButtonClicked:" destination="Zql-KC-mKa" id="V0r-B7-nlo"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
@@ -1638,7 +1695,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rAZ-zl-4EK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-356" y="-840"/>
+            <point key="canvasLocation" x="-316" y="-813"/>
         </scene>
         <!--List Description View Controller-->
         <scene sceneID="wwx-Y1-uDg">
@@ -1907,7 +1964,7 @@
         <!--Promotions View Controller-->
         <scene sceneID="8Oo-Yt-8mZ">
             <objects>
-                <viewController storyboardIdentifier="PromotionsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="CEG-sn-DaH" customClass="PromotionsViewController" customModule="HippoChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PromotionsViewController" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="CEG-sn-DaH" customClass="PromotionsViewController" customModule="HippoChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RjF-kp-86t"/>
                         <viewControllerLayoutGuide type="bottom" id="OMd-zA-N0k"/>
@@ -1917,7 +1974,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oWh-y5-vgO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="CEG-sn-DaH" id="Uc3-mk-3la"/>
@@ -1933,13 +1990,14 @@
                             <constraint firstItem="oWh-y5-vgO" firstAttribute="top" secondItem="9yB-FV-pDD" secondAttribute="top" id="wGd-n2-uqz"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7OS-F5-H3X"/>
                     <connections>
                         <outlet property="promotionsTableView" destination="oWh-y5-vgO" id="SR6-3K-KTm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pOK-DK-Hxf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1245.5999999999999" y="-841.52923538230891"/>
+            <point key="canvasLocation" x="-1908" y="530"/>
         </scene>
         <!--Payement option-->
         <scene sceneID="yAL-AA-ZXm">
@@ -2007,9 +2065,11 @@
     <resources>
         <image name="BackWhite" width="22" height="14"/>
         <image name="app_loader_shape" width="40" height="40"/>
-        <image name="audioCallIcon" width="20" height="20"/>
+        <image name="audioCallIcon" width="24" height="24"/>
         <image name="backButtonNormalStateIcon" width="16" height="14"/>
         <image name="broadcastIcon" width="25.5" height="19.5"/>
-        <image name="tiny-video-symbol" width="28" height="18"/>
+        <image name="newChat" width="30" height="30"/>
+        <image name="notification" width="21" height="21"/>
+        <image name="tiny-video-symbol" width="24" height="24"/>
     </resources>
 </document>
