--- a/Hippo/UIView/TableViewCell/BotFormTableViewCell/LeadTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/BotFormTableViewCell/LeadTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LeadTableViewCell" rowHeight="304" id="KGk-i7-Jjw" customClass="LeadTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LeadTableViewCell" rowHeight="304" id="KGk-i7-Jjw" customClass="LeadTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="464" height="304"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -61,7 +61,7 @@
                         </constraints>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jwe-7r-Zmn">
-                        <rect key="frame" x="10" y="270.5" width="30" height="30"/>
+                        <rect key="frame" x="10" y="3" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="MjD-8Y-syq"/>
                             <constraint firstAttribute="width" secondItem="Jwe-7r-Zmn" secondAttribute="height" multiplier="1:1" id="rJ5-UX-eny"/>
@@ -72,7 +72,7 @@
                     <constraint firstAttribute="trailing" secondItem="h3c-FQ-xku" secondAttribute="trailing" constant="80" id="6h6-ya-Tz2"/>
                     <constraint firstItem="Jwe-7r-Zmn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="FFg-vL-hHd"/>
                     <constraint firstAttribute="bottom" secondItem="h3c-FQ-xku" secondAttribute="bottom" constant="3" id="Y3i-7N-jCv"/>
-                    <constraint firstItem="Jwe-7r-Zmn" firstAttribute="bottom" secondItem="h3c-FQ-xku" secondAttribute="bottom" id="p24-5G-1mF"/>
+                    <constraint firstItem="Jwe-7r-Zmn" firstAttribute="top" secondItem="h3c-FQ-xku" secondAttribute="top" id="p6t-Q4-yiU"/>
                     <constraint firstItem="h3c-FQ-xku" firstAttribute="leading" secondItem="Jwe-7r-Zmn" secondAttribute="trailing" constant="5" id="qC4-vP-N2B"/>
                     <constraint firstItem="h3c-FQ-xku" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="wra-kd-Wwh"/>
                 </constraints>
