--- a/Hippo/UIView/TableViewCell/OutgoingImageCell/OutgoingImageCell.xib
+++ b/Hippo/UIView/TableViewCell/OutgoingImageCell/OutgoingImageCell.xib
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="288" id="KGk-i7-Jjw" customClass="OutgoingImageCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="288" id="KGk-i7-Jjw" customClass="OutgoingImageCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="288"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="287.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JbQ-pg-ytD" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JbQ-pg-ytD" customClass="So_UIView" customModule="HippoChat" customModuleProvider="target">
                         <rect key="frame" x="103" y="3.5" width="208.5" height="281.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GYS-uX-poV" userLabel="MainContentView" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GYS-uX-poV" userLabel="MainContentView" customClass="So_UIView" customModule="HippoChat" customModuleProvider="target">
                         <rect key="frame" x="104.5" y="5" width="205.5" height="278.5"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="8x2-sk-JrP" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="5" y="5" width="195.5" height="250"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="8x2-sk-JrP" customClass="So_UIImageView" customModule="HippoChat" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="205.5" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="eOn-2v-fHO"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1KA-2X-73K">
-                                <rect key="frame" x="5" y="5" width="195.5" height="250"/>
+                                <rect key="frame" x="0.0" y="0.0" width="205.5" height="250"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="imageTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1ee-IX-10U"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xHO-Tl-t6y" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xHO-Tl-t6y" customClass="So_UIImageView" customModule="HippoChat" customModuleProvider="target">
                                 <rect key="frame" x="79.5" y="116" width="47" height="47"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -54,11 +54,11 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="readMsgTick" translatesAutoresizingMaskIntoConstraints="NO" id="glw-ee-aad" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="readMsgTick" translatesAutoresizingMaskIntoConstraints="NO" id="glw-ee-aad" customClass="So_UIImageView" customModule="HippoChat" customModuleProvider="target">
                                 <rect key="frame" x="183.5" y="262" width="17" height="11"/>
                             </imageView>
                             <button hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3W-Oj-Py4">
-                                <rect key="frame" x="53" y="110" width="100" height="40"/>
+                                <rect key="frame" x="53" y="105" width="100" height="40"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="EaX-T2-QAg"/>
@@ -80,7 +80,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="1KA-2X-73K" firstAttribute="trailing" secondItem="8x2-sk-JrP" secondAttribute="trailing" id="0uQ-m1-9gY"/>
-                            <constraint firstItem="8x2-sk-JrP" firstAttribute="top" secondItem="GYS-uX-poV" secondAttribute="top" constant="5" id="1EQ-C8-tVe"/>
+                            <constraint firstItem="8x2-sk-JrP" firstAttribute="top" secondItem="GYS-uX-poV" secondAttribute="top" id="1EQ-C8-tVe"/>
                             <constraint firstItem="glw-ee-aad" firstAttribute="leading" secondItem="4Hq-r3-X1b" secondAttribute="trailing" constant="2.5" id="4SB-GO-v7j"/>
                             <constraint firstItem="1KA-2X-73K" firstAttribute="leading" secondItem="8x2-sk-JrP" secondAttribute="leading" id="C37-51-Dhe"/>
                             <constraint firstAttribute="bottom" secondItem="4Hq-r3-X1b" secondAttribute="bottom" constant="5" id="EWh-Yr-7es"/>
@@ -88,14 +88,14 @@
                             <constraint firstItem="4Hq-r3-X1b" firstAttribute="top" relation="greaterThanOrEqual" secondItem="8x2-sk-JrP" secondAttribute="bottom" constant="2.5" id="YBT-rH-rYh"/>
                             <constraint firstItem="glw-ee-aad" firstAttribute="top" relation="greaterThanOrEqual" secondItem="8x2-sk-JrP" secondAttribute="bottom" constant="2.5" id="egT-W4-yg5"/>
                             <constraint firstItem="a3W-Oj-Py4" firstAttribute="centerX" secondItem="8x2-sk-JrP" secondAttribute="centerX" id="hcd-pU-4wJ"/>
-                            <constraint firstItem="8x2-sk-JrP" firstAttribute="leading" secondItem="GYS-uX-poV" secondAttribute="leading" constant="5" id="iOU-DC-U19"/>
+                            <constraint firstItem="8x2-sk-JrP" firstAttribute="leading" secondItem="GYS-uX-poV" secondAttribute="leading" id="iOU-DC-U19"/>
                             <constraint firstItem="glw-ee-aad" firstAttribute="centerY" secondItem="4Hq-r3-X1b" secondAttribute="centerY" id="mBm-PQ-ez7"/>
                             <constraint firstItem="1KA-2X-73K" firstAttribute="bottom" secondItem="8x2-sk-JrP" secondAttribute="bottom" id="maL-2d-k3e"/>
                             <constraint firstItem="xHO-Tl-t6y" firstAttribute="centerX" secondItem="GYS-uX-poV" secondAttribute="centerX" id="pWL-28-PsN"/>
                             <constraint firstItem="a3W-Oj-Py4" firstAttribute="centerY" secondItem="8x2-sk-JrP" secondAttribute="centerY" id="pqF-tc-dbX"/>
                             <constraint firstItem="1KA-2X-73K" firstAttribute="top" secondItem="8x2-sk-JrP" secondAttribute="top" id="qrM-9l-Goa"/>
                             <constraint firstItem="xHO-Tl-t6y" firstAttribute="centerY" secondItem="GYS-uX-poV" secondAttribute="centerY" id="rao-kc-AFe"/>
-                            <constraint firstAttribute="trailing" secondItem="8x2-sk-JrP" secondAttribute="trailing" constant="5" id="xkt-Mn-dzx"/>
+                            <constraint firstAttribute="trailing" secondItem="8x2-sk-JrP" secondAttribute="trailing" id="xkt-Mn-dzx"/>
                             <constraint firstAttribute="trailing" secondItem="glw-ee-aad" secondAttribute="trailing" constant="5" id="yWY-lZ-GKT"/>
                         </constraints>
                     </view>
